log
Wed 27 Mar 2024 02:05:15 PM UTC: 
 list.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 57 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   73 |   newNode->data = data;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:74:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   74 |   newNode->next = list->head;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:86:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   86 |   newNode->data = data;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:87:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   87 |   newNode->next = list->current->next;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:89:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   89 |   newNode->prev = list->current;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1e33b4b
Wed 27 Mar 2024 02:06:06 PM UTC: 
 list.c | 61 ++++++++++++-------------------------------------------------
 1 file changed, 12 insertions(+), 49 deletions(-)
 tests:  1|5
total_score: 10/70
dc5e58e
Wed 27 Mar 2024 02:06:28 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
7ce20c2
Wed 27 Mar 2024 02:07:01 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
247001f
Wed 27 Mar 2024 02:07:21 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
1946a75
Wed 27 Mar 2024 02:07:41 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
1d4b91b
Wed 27 Mar 2024 02:08:56 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
f4cb346
Wed 27 Mar 2024 02:10:34 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
cdc42fe
Wed 27 Mar 2024 02:11:22 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
09f2055
Wed 27 Mar 2024 02:11:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0206173
Wed 27 Mar 2024 02:15:00 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2621556
Wed 27 Mar 2024 02:15:20 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   72 |   newNode->data = data;
      |          ^~
list.c:71:26: note: referencing an object of size 8 allocated by ‘malloc’
   71 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:73:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   73 |   newNode->next = list->head;
      |          ^~
list.c:71:26: note: referencing an object of size 8 allocated by ‘malloc’
   71 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5446302
Wed 27 Mar 2024 02:18:33 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
ab18a22
Wed 27 Mar 2024 02:19:30 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
1f0797b
Wed 27 Mar 2024 02:26:26 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
f12c270
Wed 27 Mar 2024 02:32:13 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
352a25f
Wed 27 Mar 2024 02:33:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d6def95
